--- a/src/stylesheets/app.css
+++ b/src/stylesheets/app.css
@@ -1,9 +1,15 @@
 .container {
-  color: red;
   display: flex;
-  justify-content: space-between;
   flex-direction: column;
   width: 100%;
+}
+.control{
+  flex-grow: 0;
+  flex-shrink: 0;
+  flex-basis: 50%;
+}
+.loading{
+  color: grey;
 }
 
 @media screen and (min-width:900px){
